👌 IMPROVE: Upgrade to JHipster 8.8.0
resolved #772